// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bayesian Nutrition — golden master snapshots > personaGigelT0 cold-start (zero history, no observations) 1`] = `
{
  "blueprint": {
    "blueprint_signals": [
      "isolation_graceful_degradation_compound_below_3",
      "kalman_ewma_fallback_active",
      "profile_typing_flap_suppressed",
    ],
    "confidence_interval": {
      "lower": -0.98,
      "upper": 0.98,
    },
    "likelihood_probabilities": {
      "deficit_likelihood": 0.158655,
      "maintenance_likelihood": 0.682689,
      "surplus_likelihood": 0.158655,
    },
    "passive_mode_active": false,
    "posterior": {
      "ci_lower": -0.98,
      "ci_upper": 0.98,
      "mu": 0,
      "observations_count": 0,
      "sigma": 0.5,
    },
    "prior": {
      "mu": 0,
      "sigma": 0.5,
    },
    "ui_tier": "TIER_1_SILENT",
  },
  "confidence": "low",
  "id": "bayesianNutrition",
  "recommendations": [],
  "signals": [
    "isolation_graceful_degradation_compound_below_3",
    "kalman_ewma_fallback_active",
    "profile_typing_flap_suppressed",
  ],
  "tier": "MED",
}
`;

exports[`Bayesian Nutrition — golden master snapshots > personaMaria65T3 conservative 90-day (maintain, seed 2026) 1`] = `
{
  "blueprint": {
    "blueprint_signals": [
      "isolation_graceful_degradation_compound_below_3",
      "kalman_ewma_fallback_active",
      "profile_typing_flap_suppressed",
    ],
    "confidence_interval": {
      "lower": -0.060634,
      "upper": 0.052169,
    },
    "likelihood_probabilities": {
      "deficit_likelihood": 0.196853,
      "maintenance_likelihood": 0.677473,
      "surplus_likelihood": 0.125673,
    },
    "passive_mode_active": false,
    "posterior": {
      "ci_lower": -0.060634,
      "ci_upper": 0.052169,
      "mu": -0.004233,
      "observations_count": 20,
      "sigma": 0.028776,
    },
    "prior": {
      "mu": 0,
      "sigma": 0.5,
    },
    "ui_tier": "TIER_1_SILENT",
  },
  "confidence": "medium",
  "id": "bayesianNutrition",
  "recommendations": [],
  "signals": [
    "isolation_graceful_degradation_compound_below_3",
    "kalman_ewma_fallback_active",
    "profile_typing_flap_suppressed",
  ],
  "tier": "MED",
}
`;

exports[`Bayesian Nutrition — golden master snapshots > personaMariusT2 mature 30-day history (cut goal, seed 1337) 1`] = `
{
  "blueprint": {
    "blueprint_signals": [
      "isolation_graceful_degradation_compound_below_3",
      "kalman_ewma_fallback_active",
      "profile_typing_flap_suppressed",
    ],
    "confidence_interval": {
      "lower": -0.101902,
      "upper": 0.047125,
    },
    "likelihood_probabilities": {
      "deficit_likelihood": 0.389905,
      "maintenance_likelihood": 0.567418,
      "surplus_likelihood": 0.042677,
    },
    "passive_mode_active": false,
    "posterior": {
      "ci_lower": -0.101902,
      "ci_upper": 0.047125,
      "mu": -0.027389,
      "observations_count": 20,
      "sigma": 0.038017,
    },
    "prior": {
      "mu": 0,
      "sigma": 0.5,
    },
    "ui_tier": "TIER_1_SILENT",
  },
  "confidence": "medium",
  "id": "bayesianNutrition",
  "recommendations": [],
  "signals": [
    "isolation_graceful_degradation_compound_below_3",
    "kalman_ewma_fallback_active",
    "profile_typing_flap_suppressed",
  ],
  "tier": "MED",
}
`;
